--- a/index.html
+++ b/index.html
@@ -28,6 +28,15 @@
 		</div>
 		
 		<div class="row mt-4">
+			<div class="form-check">
+  				<input class="form-check-input" type="checkbox" value="" id="new_algorithm">
+  				<label class="form-check-label" for="defaultCheck1">
+    				Inclua o novo algoritmo [OPCIONAL] [BETA]
+  				</label>
+			</div>
+		</div>
+		
+		<div class="row mt-4">
 			<input type="button" class="btn btn-primary" value="Em seguida, clique aqui" onclick="genList()" />
 		</div>
 	
