--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 		<div class="row mt-4">
 			<label>Tipo de algoritmo:</label>
 			<select id="algorithm-type" class="form-select">
-				<option selected="" value="1">Algoritmo padrão (nomes de pessoas em uma linha anterior ao horário de envio)</option>
+				<option selected="" value="1">Algoritmo padrão (nomes de pessoas isolados em uma linha anterior ao horário de envio)</option>
 				<option value="2">Algoritmo padrão melhorado (mesmo que algoritmo padrão, porém linhas em branco são desconsideradas)</option>
-				<option value="3">Algoritmo padrão modificado (nomes de pessoas na mesma linha com o horário de envio)</option>
+				<option value="3">Algoritmo padrão modificado (nomes de pessoas antes do horário de envio, mas com os dois na mesma linha)</option>
 			</select>
 		</div>
 		
